--- a/intex.html
+++ b/intex.html
@@ -225,8 +225,8 @@
                     text2.innerText = optionsB[pos];
                     text3.innerText = optionsC[pos];
                 }
-                // a=pos;
-                // return a;
+                a=pos;
+                return a;
             }
         );
         let b = null;
