--- a/Game/index.html
+++ b/Game/index.html
@@ -44,7 +44,7 @@
 
             <!-- Car Section -->
             <div id="CarDiv">
-                <img src="FIles/Car.png" alt="">
+                <img src="Files/Car.png" alt="">
             </div>
 
 
