--- a/SlidePhoto/index.html
+++ b/SlidePhoto/index.html
@@ -273,8 +273,8 @@
         </div>
         <div id="window">
             <div id="Slide">
-                <div id="Box1" class="Boxes"><img src="/1.jpg" alt="" class="imgs"></div>
-                <div id="Box2" class="Boxes"><img src="/2.jpg" alt="" class="imgs"></div>
+                <div id="Box1" class="Boxes"><img src="1.jpg" alt="" class="imgs"></div>
+                <div id="Box2" class="Boxes"><img src="2.jpg" alt="" class="imgs"></div>
                 <div id="Box3" class="Boxes"><img src="/3.jpg" alt="" class="imgs"></div>
                 <div id="Box4" class="Boxes"><img src="/4.jpg" alt="" class="imgs"></div>
                 <div id="Box5" class="Boxes"><img src="/5.jpg" alt="" class="imgs"></div>
