--- a/SlidePhoto/index.html
+++ b/SlidePhoto/index.html
@@ -269,7 +269,7 @@
 <body>
     <div id="sec">
         <div id="BTNPre">
-            Previos
+            Previous
         </div>
         <div id="window">
             <div id="Slide">
