--- a/SlidePhoto/index.html
+++ b/SlidePhoto/index.html
@@ -259,7 +259,7 @@
 
         #BTNPre {
             height: 1.5rem;
-            width: 7.2rem;
+            width: 7.6rem;
             border: 1px solid red;
             font-size: 0.8rem;
         }
@@ -275,24 +275,24 @@
             <div id="Slide">
                 <div id="Box1" class="Boxes"><img src="1.jpg" alt="" class="imgs"></div>
                 <div id="Box2" class="Boxes"><img src="2.jpg" alt="" class="imgs"></div>
-                <div id="Box3" class="Boxes"><img src="/3.jpg" alt="" class="imgs"></div>
-                <div id="Box4" class="Boxes"><img src="/4.jpg" alt="" class="imgs"></div>
-                <div id="Box5" class="Boxes"><img src="/5.jpg" alt="" class="imgs"></div>
-                <div id="Box6" class="Boxes"><img src="/6.jpg" alt="" class="imgs"></div>
-                <div id="Box7" class="Boxes"><img src="/7.jpg" alt="" class="imgs"></div>
-                <div id="Box8" class="Boxes"><img src="/8.jpg" alt="" class="imgs"></div>
-                <div id="Box9" class="Boxes"><img src="/9.jpg" alt="" class="imgs"></div>
-                <div id="Box10" class="Boxes"><img src="/10.jpg" alt="" class="imgs"></div>
-                <div id="Box11" class="Boxes"><img src="/11.jpg" alt="" class="imgs"></div>
-                <div id="Box12" class="Boxes"><img src="/12.jpg" alt="" class="imgs"></div>
-                <div id="Box13" class="Boxes"><img src="/13.jpg" alt="" class="imgs"></div>
-                <div id="Box14" class="Boxes"><img src="/14.jpg" alt="" class="imgs"></div>
-                <div id="Box15" class="Boxes"><img src="/15.jpg" alt="" class="imgs"></div>
-                <div id="Box16" class="Boxes"><img src="/16.jpg" alt="" class="imgs"></div>
-                <div id="Box17" class="Boxes"><img src="/17.jpg" alt="" class="imgs"></div>
-                <div id="Box18" class="Boxes"><img src="/18.jpg" alt="" class="imgs"></div>
-                <div id="Box19" class="Boxes"><img src="/19.jpg" alt="" class="imgs"></div>
-                <div id="Box20" class="Boxes"><img src="/20.jpg" alt="" class="imgs"></div>
+                <div id="Box3" class="Boxes"><img src="3.jpg" alt="" class="imgs"></div>
+                <div id="Box4" class="Boxes"><img src="4.jpg" alt="" class="imgs"></div>
+                <div id="Box5" class="Boxes"><img src="5.jpg" alt="" class="imgs"></div>
+                <div id="Box6" class="Boxes"><img src="6.jpg" alt="" class="imgs"></div>
+                <div id="Box7" class="Boxes"><img src="7.jpg" alt="" class="imgs"></div>
+                <div id="Box8" class="Boxes"><img src="8.jpg" alt="" class="imgs"></div>
+                <div id="Box9" class="Boxes"><img src="9.jpg" alt="" class="imgs"></div>
+                <div id="Box10" class="Boxes"><img src="10.jpg" alt="" class="imgs"></div>
+                <div id="Box11" class="Boxes"><img src="11.jpg" alt="" class="imgs"></div>
+                <div id="Box12" class="Boxes"><img src="12.jpg" alt="" class="imgs"></div>
+                <div id="Box13" class="Boxes"><img src="13.jpg" alt="" class="imgs"></div>
+                <div id="Box14" class="Boxes"><img src="14.jpg" alt="" class="imgs"></div>
+                <div id="Box15" class="Boxes"><img src="15.jpg" alt="" class="imgs"></div>
+                <div id="Box16" class="Boxes"><img src="16.jpg" alt="" class="imgs"></div>
+                <div id="Box17" class="Boxes"><img src="17.jpg" alt="" class="imgs"></div>
+                <div id="Box18" class="Boxes"><img src="18.jpg" alt="" class="imgs"></div>
+                <div id="Box19" class="Boxes"><img src="19.jpg" alt="" class="imgs"></div>
+                <div id="Box20" class="Boxes"><img src="20.jpg" alt="" class="imgs"></div>
             </div>
         </div>
         <div id="BTNNxt">
