--- a/FileTransfer/index.html
+++ b/FileTransfer/index.html
@@ -210,7 +210,7 @@
             <div draggable="false" id="h11P">
                 <h1 draggable="false" id="h11">Uploading</h1>
             </div>
-            <img draggable="false" src="/phone.png" id="phone" alt="">
+            <img draggable="false" src="phone.png" id="phone" alt="">
             <div draggable="false" id="BallP">
                 <div draggable="false" class="Balls" id="Ball1"></div>
                 <div draggable="false" class="Balls" id="Ball2"></div>
@@ -221,7 +221,7 @@
                 <div draggable="false" class="BallsA" id="Ball13"></div>
 
             </div>
-            <img draggable="false" src="/server.png" alt="" id="earth">
+            <img draggable="false" src="server.png" alt="" id="earth">
         </div>
     </div>
 
