--- a/TechnicalTechX/index.html
+++ b/TechnicalTechX/index.html
@@ -23,6 +23,11 @@
             <p class="QuickBTNs" id="Home">Home</p>
             <p class="QuickBTNs" id="Videos">Videos</p>
             <p class="QuickBTNs" id="Blogs">Blogs</p>
+            <div id="BTNForHiddenEle">
+                <div class="LinesOfBTNHidden" id="LinesOfBTNHidden1"></div>
+                <div class="LinesOfBTNHidden" id="LinesOfBTNHidden2"></div>
+                <div class="LinesOfBTNHidden" id="LinesOfBTNHidden3"></div>
+            </div>
         </div>
     </nav>
 
