--- a/TechnicalTechX/index.html
+++ b/TechnicalTechX/index.html
@@ -17,6 +17,18 @@
             <span id="Line2" class="Lines"></span>
             <span id="Line3" class="Lines"></span>
         </div>
+
+        <div class="Non" id="SlideSide">
+            <div id="SideBoxe11" class="SideBoxes2">Home</div>
+            <div id="SideBoxe12" class="SideBoxes2">Blogs</div>
+            <div id="SideBoxe13" class="SideBoxes2">Instagram</div>
+            <div id="SideBoxe14" class="SideBoxes2">YouTube</div>
+            <div id="SideBoxe15" class="SideBoxes2">All Videos</div>
+            <div id="SideBoxe16" class="SideBoxes2">Downloads</div>
+            <div id="SideBoxe17" class="SideBoxes2">Playlists</div>
+            <div id="SideBoxe18" class="SideBoxes2">About Me</div>
+        </div>
+
         <div id="Slide">
             <img src="Files/IMGProfile.png" draggable="false" alt="Can't Load Image" id="IMGProfile">
             <h1 id="h1">Technical TechX</h1>
@@ -27,6 +39,12 @@
                 <div class="LinesOfBTNHidden" id="LinesOfBTNHidden1"></div>
                 <div class="LinesOfBTNHidden" id="LinesOfBTNHidden2"></div>
                 <div class="LinesOfBTNHidden" id="LinesOfBTNHidden3"></div>
+            </div>
+            <div id="HiddenEle">
+                <p class="QuickBTNs2" id="Home2">Home</p>
+                <p class="QuickBTNs2" id="Videos2">Videos</p>
+                <p class="QuickBTNs2" id="Blogs2">Blogs</p>
+
             </div>
         </div>
     </nav>
