--- a/TechnicalTechX/index.html
+++ b/TechnicalTechX/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,19 +19,20 @@
         </div>
 
         <div class="Non" id="SlideSide">
-            <div id="SideBoxe11" class="SideBoxes2">Home</div>
-            <div id="SideBoxe12" class="SideBoxes2">Blogs</div>
-            <div id="SideBoxe13" class="SideBoxes2">Instagram</div>
-            <div id="SideBoxe14" class="SideBoxes2">YouTube</div>
-            <div id="SideBoxe15" class="SideBoxes2">All Videos</div>
-            <div id="SideBoxe16" class="SideBoxes2">Downloads</div>
-            <div id="SideBoxe17" class="SideBoxes2">Playlists</div>
-            <div id="SideBoxe18" class="SideBoxes2">About Me</div>
+            <div id="Linetop"></div>
+            <div id="SideBoxe11" class="SideBoxes2"><img src="Files/house.png" alt="" class="SidePanelImages invert" id="SideImage1"> Home</div>
+            <div id="SideBoxe12" class="SideBoxes2"><img src="Files/blogs.png" alt="" class="SidePanelImages" id="SideImage2"> Blogs</div>
+            <div id="SideBoxe13" class="SideBoxes2"><img src="Files/instagramicon.png" alt="" class="SidePanelImages" id="SideImage3"> Instagram</div>
+            <div id="SideBoxe14" class="SideBoxes2"><img src="Files/youtube.png" alt="" class="SidePanelImages" id="SideImage4"> YouTube</div>
+            <div id="Sideoxe15" class="SideBoxes2"><img src="Files/play.png" alt="" class="SidePanelImages invert" id="SideImage5"> All Videos</div>
+            <div id="SideBoxe16" class="SideBoxes2"><img src="Files/downloadicons.png" alt="" class="SidePanelImages" id="SideImage6"> Downloads</div>
+            <div id="SideBoxe17" class="SideBoxes2"><img src="Files/playlist.png" alt="" class="SidePanelImages invert" id="SideImage7"> Playlists</div>
+            <div id="SideBoxe18" class="SideBoxes2"><img src="Files/about_me.png" alt="" class="SidePanelImages invert" id="SideImage8"> About Me</div>
         </div>
 
         <div id="Slide">
-            <img src="Files/IMGProfile.png" draggable="false" alt="Can't Load Image" id="IMGProfile">
-            <h1 id="h1">Technical TechX</h1>
+            <img src="Files/BGMI.jpg" draggable="false" alt="Can't Load Image" id="IMGProfile">
+            <h1 id="h1">BGMI</h1>
             <p class="QuickBTNs" id="Home">Home</p>
             <p class="QuickBTNs" id="Videos">Videos</p>
             <p class="QuickBTNs" id="Blogs">Blogs</p>
