--- a/GoogleSite/index.html
+++ b/GoogleSite/index.html
@@ -14,7 +14,7 @@
     <div id="sec">
 
         <nav>
-            <img src="FIles/Profile.png" alt="" id="Profile">
+            <img src="Files/Profile.png" alt="" id="Profile">
             <h1 id="h1">Technical TechX</h1>
             <div id="p1">
                 <div class="QuickBtnS" id="Quick1">Home</div>
