--- a/GoogleSite/index.html
+++ b/GoogleSite/index.html
@@ -42,10 +42,7 @@
             <div id="Win2">
                 <!-- Latest Video -->
                 <div id="LatestVidP1">
-                    <iframe id="YoutubeVidPlayer" src="https://www.youtube.com/embed/OKbxnDI3z70"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <a href="" id="YoutubeVidPlayer"><img src="Files/Top10 Video Editing apps.jpg" alt="" id="ThumbnailOfLatestVid"><p id="WatchOn">Watch on YouTube</p></a>
 
                         <h4 id="YoutubeVidName">Top 10 VIDEO EDITING Apps For Android | By Technical TechX 🔥 <a href="#" id="SubscribeBTN">
                             Subscribe
