--- a/Blogger/index.html
+++ b/Blogger/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Files/goglesearch.png" type="image/x-icon">
     <link rel="stylesheet" href="Style/style.css">
-    <title>Document</title>
+    <title>Google</title>
 </head>
 
 <body>
@@ -20,14 +24,22 @@
         <div class="QuickLinksItems" id="Quick1">Home</div>
         <div class="QuickLinksItems" id="Quick2">Videos</div>
         <div class="QuickLinksItems" id="Quick3">Websites</div>
-        <div class="QuickLinksItems" id="Quick4">About</div>
+        <div class="QuickLinksItems" id="Quick4">More</div>
     </div>
     <nav>
         <div id="slideNav">
             <div id="ProfileImg"></div>
-            <h1 id="WebsiteName">Royal Designer</h1>
+            <h1 id="WebsiteName">Google</h1>
         </div>
     </nav>
+
+    <div id="content">
+        <div id="Front1">
+            <img src="Files/MobileCal.png" draggable="false" id="MobileImages" alt="">
+            <p id="AboutMobileImg">Hello I made a calculator design with HTML, CSS. But its not working because I did not programmed it yet. You can try it by pressing Numbers on it. Go Now -> <a id="fontLink" href="#">Calculator |</a></p>
+        </div>
+        <div id="Front2"></div>
+    </div>
 </body>
 <script src="Script/script.js"></script>
 
